Alignment fix in homepage

--- a/style.css
+++ b/style.css
@@ -25,10 +25,16 @@
 }
 .navbar
 {   
+    width: 100% !important;
     display: flex;
     align-items: center;
     padding: 0px;
 }
+/* body {
+    margin-left: 100px;
+    margin-right: 100px;
+  } */
+  
 
 nav{
     flex: 1;
@@ -44,6 +50,8 @@ nav ul li{
     display: inline-block;
     margin-right: 20px;
 }
+
+.about-page
 
 html {
   scroll-behavior: smooth;
